# pyisobmff

./: .gitignore  LICENSE  README.MD  crawl.py  pyproject.toml  requirements.txt  setup.cfg  test.py
isobmff/: __init__.py  iterator.py  slice.py  utils.py
isobmff/atoms/: __init__.py  atom.py  ctts.py  dref.py  elst.py  full.py  hdlr.py  mdhd.py  mvhd.py  raw.py  sbgp.py  sgpd.py  stco.py  stsc.py  stsd.py  stss.py  stsz.py  stts.py  table.py  tkhd.py  type.py  vmhd.py
isobmff/box/: __init__.py  meta.py  protected.py  segment.py  structure.py  user.py
isobmff/box/file/: __init__.py  delivery.py
isobmff/box/movie/: __init__.py  fragment.py  post_decoder.py
isobmff/box/track/: __init__.py  data.py  incomplete.py  media.py  sub.py  time.py
isobmff/box/track/media/: __init__.py  handler.py
isobmff/box/track/sample/: __init__.py  group.py
isobmff/registries/: __init__.py  mp4.py  types.py
