[metadata]
name = isobmff
version = attr: isobmff.__version__
url = https://github.com/ggpwnkthx/pyisobmff
description = lazy loads ISO Base Media File Format data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = isobmff
license =
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11